// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className=""
>
  <label
    className="MuiFormControlLabel-root-1"
  >
    <span
      className="MuiSwitch-root-4"
    >
      <span
        className="MuiButtonBase-root-23 MuiIconButton-root-17 MuiSwitchBase-root-13 MuiSwitch-switchBase-7 MuiSwitch-colorPrimary-9"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-22"
        >
          <span
            className="MuiSwitch-icon-5"
          />
          <input
            checked={false}
            className="MuiSwitchBase-input-16"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="switch"
          />
        </span>
        <span
          className="MuiTouchRipple-root-26"
        />
      </span>
      <span
        className="MuiSwitch-bar-12"
      />
    </span>
    <span
      className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-3"
    >
      Title
    </span>
  </label>
</div>
`;

exports[`renders disabled 1`] = `
<div
  className=""
>
  <label
    className="MuiFormControlLabel-root-1 MuiFormControlLabel-disabled-2"
  >
    <span
      className="MuiSwitch-root-4"
    >
      <span
        className="MuiButtonBase-root-23 MuiButtonBase-disabled-24 MuiIconButton-root-17 MuiIconButton-disabled-21 MuiSwitchBase-root-13 MuiSwitch-switchBase-7 MuiSwitch-colorPrimary-9 MuiSwitchBase-disabled-15 MuiSwitch-disabled-11"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-22"
        >
          <span
            className="MuiSwitch-icon-5"
          />
          <input
            checked={false}
            className="MuiSwitchBase-input-16"
            disabled={true}
            onChange={[Function]}
            type="checkbox"
            value="switch"
          />
        </span>
      </span>
      <span
        className="MuiSwitch-bar-12"
      />
    </span>
    <span
      className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-3 MuiFormControlLabel-disabled-2"
    >
      Title
    </span>
  </label>
</div>
`;

exports[`renders with helper text 1`] = `
<div
  className=""
>
  <label
    className="MuiFormControlLabel-root-1"
  >
    <span
      className="MuiSwitch-root-4"
    >
      <span
        className="MuiButtonBase-root-23 MuiIconButton-root-17 MuiSwitchBase-root-13 MuiSwitch-switchBase-7 MuiSwitch-colorPrimary-9"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-22"
        >
          <span
            className="MuiSwitch-icon-5"
          />
          <input
            checked={false}
            className="MuiSwitchBase-input-16"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="switch"
          />
        </span>
        <span
          className="MuiTouchRipple-root-26"
        />
      </span>
      <span
        className="MuiSwitch-bar-12"
      />
    </span>
    <span
      className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-3"
    >
      Title
    </span>
  </label>
  <p
    className="MuiFormHelperText-root-57"
  >
    test
  </p>
</div>
`;
